renamed some nameservice methods for consistency added coverage
